# lightning-hydra-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  renovate.json
.github/: renovate.json5
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  run-pytest.yaml  test.yml  tests.yaml
configs/: train.yaml
configs/model/: mnist.yaml
scripts/: torchmetrics+compile_error_test.py
src/lightning_hydra_template/: eval.py  train.py
src/lightning_hydra_template/configs/: __init__.py  eval.yaml  train.yaml
src/lightning_hydra_template/configs/callbacks/: early_stopping.yaml
src/lightning_hydra_template/configs/data/: mnist.yaml
src/lightning_hydra_template/configs/hparams_search/: mnist_optuna.yaml
src/lightning_hydra_template/configs/local/: example.yaml
src/lightning_hydra_template/configs/logger/: comet.yaml  neptune.yaml  wandb.yaml
src/lightning_hydra_template/configs/model/: mnist.yaml
src/lightning_hydra_template/configs/paths/: default.yaml
src/lightning_hydra_template/configs/serial_sweeper/: seeds.yaml
src/lightning_hydra_template/configs/trainer/: default.yaml
src/lightning_hydra_template/data/: mnist_datamodule.py
src/lightning_hydra_template/models/: mnist_module.py
src/lightning_hydra_template/models/components/: simple_dense_net.py
src/lightning_hydra_template/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tests/helpers/: package_available.py  path.py  run.py  run_if.py  run_sh_command.py
tests/integration/: conftest.py  test_configs.py  test_sweeps.py  test_train.py
tests/unit/: test_datamodules.py
